# hello-world-fastapi-docker

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
Dockerfiles/: Dockerfile  Dockerfile.debug
app/: main.py
