[tool.poetry]
name = "hello-world-fastapi-docker"
version = "0.1.0"
description = ""
authors = ["Julian Iguavita <julian.iguavita@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
